# rsvancify

./: Cargo.toml  README.md  ROADMAP.md
config/: sources.json
src/: app.rs  main.rs  tui.rs
src/utils/: json.rs  mod.rs  request.rs
