[package]
name = "rsvancify"
readme = "README.md"
license = "LICENSE.txt"
authors = ["Rhelv <bionicvnb@gmail.com>"]
version = "0.0.1"                         # Not working yet, 0.1 is to get it to work
edition = "2021"

[dependencies]
coreutils = { version = "0", features = ["feat_os_windows"] }
anyhow = "1"
thiserror = "1"
ratatui = { version = "0.26", features = ["serde"] }
crossterm = { version = "0.27", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
reqwest = { version = "0.12", features = ["json"] }

[profile.release]
lto = "fat"
rpath = true
strip = "symbols"
codegen-units = 1
opt-level = 3
debug = false

[profile.dev]
lto = "off"
strip = "none"
codegen-units = 16
opt-level = 0
debug = true
